<resources>
    <string name="app_name">TravelGuide</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="auto_login">自动登录</string>
    <string name="pwd"> 密码</string>
    <string name="email"> 邮箱</string>
    <string name="username"> 用户名</string>
    <string name="register">注册</string>
    <string name="logistics">物流企业</string>
    <string name="user">普通用户</string>
    <string name="oldPwd">旧密码</string>
    <string name="newPwd">新密码</string>
    <string name="complete">完成</string>
</resources>
