<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/qmui_config_color_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/qmui_topbar_height"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="70dp">

            <com.qmuiteam.qmui.widget.QMUIRadiusImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:src="@mipmap/logo"
                app:qmui_border_color="?attr/qmui_config_color_gray_6"
                app:qmui_border_width="1px"
                app:qmui_is_circle="true"
                app:qmui_selected_border_color="?attr/qmui_config_color_gray_4"
                app:qmui_selected_border_width="1px"
                app:qmui_selected_mask_color="?attr/qmui_config_color_gray_8" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="160dp"
                android:text="@string/app_name"
                android:textColor="#000"
                android:textSize="23sp"
                android:typeface="monospace" />

            <RelativeLayout
                android:id="@+id/rl_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:layout_marginTop="40dp"
                android:background="@drawable/rectangle_edittext"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <ImageView
                    android:id="@+id/iv_userIconName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="30dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:src="@mipmap/ic_edittextuname" />

                <View
                    android:id="@+id/viewName"
                    android:layout_width="1dip"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/iv_userIconName"
                    android:background="@color/app_color_description" />

                <EditText
                    android:id="@+id/et_userName"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/viewName"
                    android:background="@null"
                    android:ems="19"
                    android:hint="@string/username"
                    android:textColorHint="@color/app_color_description"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/iv_unameClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@mipmap/ic_backspace_grey600_24dp"
                    android:visibility="invisible" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_userPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_userName"
                android:layout_marginTop="1dp"
                android:background="@drawable/rectangle_edittext"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <ImageView
                    android:id="@+id/iv_userIconPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="30dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:src="@mipmap/ic_edittextupwd" />

                <View
                    android:id="@+id/viewPwd"
                    android:layout_width="1dip"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/iv_userIconPwd"
                    android:background="@color/app_color_description" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/viewPwd"
                    android:background="@null"
                    android:drawablePadding="5dp"
                    android:ems="19"
                    android:hint="@string/pwd"
                    android:inputType="textPassword"
                    android:textColorHint="@color/app_color_description"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/iv_pwdClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@mipmap/ic_backspace_grey600_24dp"
                    android:visibility="invisible" />

            </RelativeLayout>

            <CheckBox
                android:id="@+id/cb_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_userPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:checked="false"
                android:duplicateParentState="false"
                android:text="@string/auto_login"
                android:textColor="#666666"
                android:textSize="15sp"
                app:buttonTint="@color/app_color_blue" />

            <RelativeLayout
                style="@style/button_wrapper_style"
                android:layout_below="@id/cb_checkbox">

                <com.qmuiteam.qmui.widget.QMUIFloatLayout
                    android:id="@+id/qmuidemo_floatlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:qmui_childHorizontalSpacing="20dp"
                    app:qmui_childVerticalSpacing="20dp">

                    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                        android:id="@+id/login_btn"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:paddingLeft="16dp"
                        android:paddingTop="10dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="10dp"
                        android:text="@string/login"
                        app:qmui_isRadiusAdjustBounds="true" />

                    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                        android:id="@+id/register_btn"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:paddingLeft="16dp"
                        android:paddingTop="10dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="10dp"
                        android:text="@string/register"
                        app:qmui_isRadiusAdjustBounds="true" />
                </com.qmuiteam.qmui.widget.QMUIFloatLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true" />


</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>