<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/qmui_config_color_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/qmui_topbar_height"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl_oldPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_below="@id/tv_title"
                android:background="@drawable/rectangle_edittext">

                <ImageView
                    android:id="@+id/iv_userIconName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="30dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:src="@mipmap/ic_edittextupwd" />

                <View
                    android:id="@+id/viewName"
                    android:layout_width="1dip"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/iv_userIconName"
                    android:background="@color/app_color_description" />

                <EditText
                    android:id="@+id/et_oldPwd"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/viewName"
                    android:background="@null"
                    android:ems="19"
                    android:hint="@string/oldPwd"
                    android:textColorHint="@color/app_color_description"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/iv_unameClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@mipmap/ic_backspace_grey600_24dp"
                    android:visibility="invisible" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_newPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_oldPwd"
                android:layout_marginTop="1dp"
                android:background="@drawable/rectangle_edittext">

                <ImageView
                    android:id="@+id/iv_userIconPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="30dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:src="@mipmap/ic_edittextupwd" />

                <View
                    android:id="@+id/viewPwd"
                    android:layout_width="1dip"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/iv_userIconPwd"
                    android:background="@color/app_color_description" />

                <EditText
                    android:id="@+id/et_newPwd"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/viewPwd"
                    android:background="@null"
                    android:drawablePadding="5dp"
                    android:ems="19"
                    android:hint="@string/newPwd"
                    android:inputType="textPassword"
                    android:textColorHint="@color/app_color_description"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/iv_pwdClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@mipmap/ic_backspace_grey600_24dp"
                    android:visibility="invisible" />

            </RelativeLayout>


            <RelativeLayout
                style="@style/button_wrapper_style"
                android:layout_below="@id/rl_newPwd">

                <com.qmuiteam.qmui.widget.QMUIFloatLayout
                    android:id="@+id/qmuidemo_floatlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:qmui_childHorizontalSpacing="20dp"
                    app:qmui_childVerticalSpacing="20dp">

                    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                        android:id="@+id/complete_btn"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:paddingLeft="16dp"
                        android:paddingTop="10dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="10dp"
                        android:text="@string/complete"
                        app:qmui_isRadiusAdjustBounds="true" />
                </com.qmuiteam.qmui.widget.QMUIFloatLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true" />


</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>